--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -15,9 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 99.0.4844\n",
+      "Get LATEST chromedriver version for 99.0.4844 google-chrome\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/99.0.4844.51/chromedriver_win32.zip\n",
+      "Driver has been saved in cache [C:\\Users\\Gaurav\\.wdm\\drivers\\chromedriver\\win32\\99.0.4844.51]\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the executable path and initialize Splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
@@ -77,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's Mars 2020 Heads Into the Test Chamber</div>"
+       "<div class=\"content_title\">NASA's MAVEN Explores Mars to Understand Radio Interference at Earth</div>"
       ]
      },
      "execution_count": 5,
@@ -97,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "\"NASA's Mars 2020 Heads Into the Test Chamber\""
+       "\"NASA's MAVEN Explores Mars to Understand Radio Interference at Earth\""
       ]
      },
      "execution_count": 6,
@@ -119,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "'In this time-lapse video taken at JPL, engineers move the Mars 2020 rover into a large vacuum chamber for testing in Mars-like environmental conditions.'"
+       "'NASA’s MAVEN spacecraft has discovered “layers” and “rifts” in the electrically charged part of the upper atmosphere of Mars.'"
       ]
      },
      "execution_count": 7,
@@ -180,7 +194,7 @@
        "<link href=\"css/app.css\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<link href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<title>Space Image</title>\n",
-       "<style type=\"text/css\">.fancybox-margin{margin-right:0px;}</style></head>\n",
+       "<style type=\"text/css\">.fancybox-margin{margin-right:17px;}</style></head>\n",
        "<body>\n",
        "<div class=\"header\">\n",
        "<nav class=\"navbar navbar-expand-lg\">\n",
@@ -201,9 +215,9 @@
        "<h2 class=\"brand_title\">FEATURED IMAGE</h2>\n",
        "<h1 class=\"media_feature_title\">Dusty Space Cloud</h1>\n",
        "<br/>\n",
-       "<a class=\"showimg fancybox-thumbs\" href=\"image/featured/mars3.jpg\" target=\"_blank\"> <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>\n",
+       "<a class=\"showimg fancybox-thumbs\" href=\"image/featured/mars1.jpg\" target=\"_blank\"> <button class=\"btn btn-outline-light\"> FULL IMAGE</button></a>\n",
        "</div>\n",
-       "<img class=\"headerimage fade-in\" src=\"image/featured/mars3.jpg\"/></div>\n",
+       "<img class=\"headerimage fade-in\" src=\"image/featured/mars1.jpg\"/></div>\n",
        "<div class=\"search sticky\">\n",
        "<div class=\"col-md-12\">\n",
        "<div class=\"row\">\n",
@@ -375,7 +389,7 @@
        "<link href=\"js/fancyBox/jquery.fancybox.css?v=2.1.5\" media=\"screen\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<link href=\"js/fancyBox/helpers/jquery.fancybox-thumbs.css?v=1.0.7\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<script src=\"js/fancyBox/helpers/jquery.fancybox-thumbs.js?v=1.0.7\" type=\"text/javascript\"></script>\n",
-       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 110px; left: 65px; opacity: 0.100036; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars3.jpg\"/></div></div></div></div></div></body></html>"
+       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image fancybox-opened\" style=\"width: 670px; height: auto; position: absolute; top: 70px; left: 174px; opacity: 1; overflow: visible;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars1.jpg\"/></div></div><a class=\"fancybox-item fancybox-close\" href=\"javascript:;\" title=\"Close\"></a></div></div></div></body></html>"
       ]
      },
      "execution_count": 10,
@@ -398,7 +412,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars3.jpg'"
+       "'image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 11,
@@ -420,7 +434,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 12,
@@ -672,35 +686,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Create a list to hold the images and titles.\n",
-    "hemisphere_image_urls = []\n",
+    "# Parse the data\n",
+    "hemi_html = browser.html\n",
+    "hemi_soup = soup(hemi_html, 'html.parser')\n",
     "\n",
-    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n"
+    "# Retrieve all items for hemispheres information\n",
+    "items = hemi_soup.find_all('div', class_='item')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cerberus Hemisphere Enhanced\n",
+      "images/full.jpg\n",
+      "Schiaparelli Hemisphere Enhanced\n",
+      "images/schiaparelli_enhanced-full.jpg\n",
+      "Syrtis Major Hemisphere Enhanced\n",
+      "images/syrtis_major_enhanced-full.jpg\n",
+      "Valles Marineris Hemisphere Enhanced\n",
+      "images/valles_marineris_enhanced-full.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Create a list to hold the images and titles.\n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "main_url = \"https://marshemispheres.com/\"\n",
+    "\n",
+    "# Create loop to scrape through all hemisphere information\n",
+    "for x in items:\n",
+    "    hemisphere = {}\n",
+    "    titles = x.find('h3').text\n",
+    "    # create link for full image\n",
+    "    link_ref = x.find('a', class_='itemLink product-item')['href']\n",
+    "    # Use the base URL to create an absolute URL and browser visit\n",
+    "    browser.visit(main_url + link_ref)\n",
+    "    # parse the data\n",
+    "    image_html = browser.html\n",
+    "    image_soup = soup(image_html, 'html.parser')\n",
+    "    download = image_soup.find('div', class_= 'downloads')\n",
+    "    img_url = download.find('a')['href']\n",
+    "    \n",
+    "    print(titles)\n",
+    "    print(img_url)\n",
+    "    \n",
+    "    # append list\n",
+    "    hemisphere['img_url'] = img_url\n",
+    "    hemisphere['title'] = titles\n",
+    "    hemisphere_image_urls.append(hemisphere)\n",
+    "    browser.back()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
-       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
+       "[{'img_url': 'images/full.jpg', 'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'images/schiaparelli_enhanced-full.jpg',\n",
        "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
+       " {'img_url': 'images/syrtis_major_enhanced-full.jpg',\n",
        "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
+       " {'img_url': 'images/valles_marineris_enhanced-full.jpg',\n",
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +796,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
